--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1240,13 +1240,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 39,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GVzxD-Rec3mz",
-        "outputId": "550305bf-7f7b-4bc0-ec27-a30ba44a57ce"
+        "outputId": "34e98955-3937-4c08-802a-7cdb6b32bf84"
       },
       "outputs": [
         {
@@ -1259,7 +1259,7 @@
             "Model:                            OLS   Adj. R-squared:                  0.256\n",
             "Method:                 Least Squares   F-statistic:                     360.0\n",
             "Date:                Tue, 02 Dec 2025   Prob (F-statistic):          1.69e-266\n",
-            "Time:                        00:51:33   Log-Likelihood:                -2069.8\n",
+            "Time:                        03:18:39   Log-Likelihood:                -2069.8\n",
             "No. Observations:                4165   AIC:                             4150.\n",
             "Df Residuals:                    4160   BIC:                             4181.\n",
             "Df Model:                           4                                         \n",
@@ -1290,9 +1290,9 @@
         "import statsmodels.formula.api as sm\n",
         "\n",
         "URL = \"https://github.com/dustywhite7/pythonMikkeli/raw/master/exampleData/wagePanelData.csv\"\n",
-        "df = pd.read_csv(URL)\n",
-        "#df\n",
-        "reg = sm.ols(\"log_wage ~ years_experience + weeks_worked + occupation_code + education\", data=df).fit()\n",
+        "data = pd.read_csv(URL)\n",
+        "\n",
+        "reg = sm.ols(\"log_wage ~ years_experience + weeks_worked + occupation_code + education\", data=data).fit()\n",
         "print(reg.summary())"
       ]
     },
